# tarotbot

./: Cargo.toml  README.md  tarotbot.service
.github/workflows/: rust.yml
src/: gpt3.rs  main.rs
